--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,8 +31,37 @@ pipeline {
         stage("Publish to Nexus Repository Manager") {
             steps {
                 script {
-                    nexusArtifactUploader artifacts: [[artifactId: 'Jars-to-Nexus', classifier: '', file: 'target/Jars-to-Nexus-0.0.1-SNAPSHOT.jar', type: 'jar']], credentialsId: 'e0160b1f-fafd-4db0-b403-ea267f9f698c', groupId: 'com.example', nexusUrl: 'localhost:8081/repository/nexus/', nexusVersion: 'nexus3', protocol: 'http', repository: 'nexus', version: '0.0.1-SNAPSHOT'
+                    pom = readMavenPom file: "pom.xml";
+                    filesByGlob = findFiles(glob: "target/*.${pom.packaging}");
+                    echo "${filesByGlob[0].name} ${filesByGlob[0].path} ${filesByGlob[0].directory} ${filesByGlob[0].length} ${filesByGlob[0].lastModified}"
+                    artifactPath = filesByGlob[0].path;
+                    artifactExists = fileExists artifactPath;
+                    if(artifactExists) {
+                        echo "*** File: ${artifactPath}, group: ${pom.groupId}, packaging: ${pom.packaging}, version ${pom.version}";
+                        nexusArtifactUploader(
+                            nexusVersion: NEXUS_VERSION,
+                            protocol: NEXUS_PROTOCOL,
+                            nexusUrl: NEXUS_URL,
+                            groupId: pom.groupId,
+                            version: pom.version,
+                            repository: NEXUS_REPOSITORY,
+                            credentialsId: NEXUS_CREDENTIAL_ID,
+                            artifacts: [
+                                [artifactId: pom.artifactId,
+                                classifier: '',
+                                file: artifactPath,
+                                type: pom.packaging],
+                                [artifactId: pom.artifactId,
+                                classifier: '',
+                                file: "pom.xml",
+                                type: "pom"]
+                            ]
+                        );
+                    } else {
+                        error "*** File: ${artifactPath}, could not be found";
+                    }
                 }
+            }
             }
         }
     }
